# a-video

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: API.txt  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_handle.rs  commands.rs  lib.rs  main.rs
src-tauri/src/collect/: collect.rs
src-tauri/src/crawler/: ffzy.rs  mod.rs  vod_type.json
src-tauri/src/crawler/package/: config.rs  fetch.rs  html_parser.rs  mod.rs  url_utils.rs
src-tauri/src/db/: db_config.rs  mod.rs  modes.rs  sqlite.rs
src-tauri/src/package/: config.rs  fetch.rs
src-tauri/src/services/: mod.rs  vod_service.rs
src-tauri/src/structs/: structs.rs
src-tauri/src/utils/: log.rs  mod.rs  resource_utils.rs  utils.rs
src/components/: VideoPlayer.vue
src/pages/: CollectPage.vue  HomePage.vue  MyPages.vue  PlayPage.vue  hom.vue
src/router/: index.ts
src/stores/: videoStore.ts
src/types/: index.ts
